# ProjectX

./: .env.example  .gitignore  CMakeLists.txt
app/: CMakeLists.txt  main.cpp
cmake/: include.cmake
include/algorithm/: OrderDistributionAlgorithm.h  alg.h  algorithm.h
include/bot/: BotController.h  Cart.h
include/db/: Database.h  MenuRepository.h  OrderRepository.h  UserRepository.h
include/logger/: logger.h
include/menu/: Menu.h  MenuCategory.h  MenuItem.h  Order.h  TelegramFormat.h
src/: CMakeLists.txt
src/algorithm/: alg.cpp
src/bot/: BotController.cpp  Cart.cpp
src/db/: Database.cpp  MenuRepository.cpp  OrderRepository.cpp  UserRepository.cpp
src/logger/: logger.cpp
src/menu/: Menu.cpp  MenuCategory.cpp  MenuItem.cpp  TelegramFormat.cpp
tests/: CMakeLists.txt  test1.cpp  test_alg.cpp  test_db.cpp  test_menu.cpp
